--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -26,30 +26,30 @@
 		<div class="container">
 
 			<div class="mobile-menu" id="js-mobile-menu">
-				<div :class="{ current: menu }" v-on:click="toggle">
+				<div run="open_menu">
 					Menu
 				</div>
-				<div :class="{ current: article }" v-on:click="toggle">
+				<div run="close_menu" class="current">
 					Article
 				</div>
 			</div>
 
-			<form action="/" method="get" class="sub-container side-container" :class="{ open: active }" id="js-sidebar-form">
-				<div class="block sources">
+			<form action="/" method="get" class="sub-container side-container" id="js-menu">
+				<div class="block sources" id="js-fit-height">
 					<div class="header">Sources</div>
-					<x-option class="options-item" label="All"	v-on:toggled="set_all" v-on:saveme="save"></x-option>
-					<x-option class="options-item" label="CNN" v-on:toggled="update" v-on:saveme="save"></x-option>
-					<x-option class="options-item" label="CNBC" v-on:toggled="update" v-on:saveme="save"></x-option>
-					<x-option class="options-item" label="Fox News" v-on:toggled="update" v-on:saveme="save"></x-option>
-					<x-option class="options-item" label="New York Times" v-on:toggled="update" v-on:saveme="save"></x-option>
-					<x-option class="options-item" label="Reuters" v-on:toggled="update" v-on:saveme="save"></x-option>
-					<x-option class="options-item" label="Washington Post" v-on:toggled="update" v-on:saveme="save"></x-option>
+					<label id="all_label" for="all_check" class="option-item">All<input type="checkbox" id="all_check" name="all" checked></label>
+					<label id="cnn_label" for="cnn_check" class="option-item">CNN<input type="checkbox" id="cnn_check" name="cnn" checked></label>
+					<label id="cnbc_label" for="cnbc_check" class="option-item">CNBC<input type="checkbox" id="cnbc_check" name="cnbc" checked></label>
+					<label id="foxnews_label" for="foxnews_check" class="option-item">Fox News<input type="checkbox" id="foxnews_check" name="foxnews" checked></label>
+					<label id="nytimes_label" for="nytimes_check" class="option-item">New York Times<input type="checkbox" id="nytimes_check" name="nytimes" checked></label>
+					<label id="reuters_label" for="reuters_check" class="option-item">Reuters<input type="checkbox" id="reuters_check" name="reuters" checked></label>
+					<label id="washingtonpost_label" for="washingtonpost_check" class="option-item">Washington Post<input type="checkbox" id="washingtonpost_check" name="reuters" checked></label>
 				</div>
 
 				<div class="block">
 					<div class="header">Categories</div>
 					<div class ="category-bar">
-						<select name="category" class="category-input" v-model="category">
+						<select name="category" class="category-input" id="category-input">
 							<option value="all">All</option>
 							{% for option in categories %}
 							<option value="{{ option|lower }}">{{ option }}</option>
@@ -61,10 +61,10 @@
 				<div class="block">
 					<div class="header">Search</div>
 					<div class="search-bar">
-						<input class="search-input" type="text" name="search" placeholder="Search" v-model="search">
+						<input class="search-input" id="search-input" type="text" name="search" placeholder="Search">
 					</div>
 					<div class="result-bar">
-						<input class="count-input" type="number" placeholder="Results (max 1000)" name="count" v-model="count">
+						<input class="count-input" id="count-input" type="number" placeholder="Results (max 1000)" name="count">
 					</div>
 				</div>
 
@@ -129,7 +129,6 @@
 			</div>
 		</div>
 		<!-- External Javascript -->
-		<script src="/static/js/vue.js"></script>
 		<script src="/static/js/index.js"></script>
 		<!-- End External Javascript -->
 	</body>
