--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -24,15 +24,15 @@
 		<div class="container">
 
 			<div class="mobile-menu" id="js-mobile-menu">
-				<div class="menu">
+				<div run="open_menu">
 					Menu
 				</div>
-				<div class="article">
+				<div run="close_menu" class="current">
 					Article
 				</div>
 			</div>
 
-			<form action="/" method="get" class="sub-container side-container" class="active" id="js-sidebar-form">
+			<form action="/" method="get" class="sub-container side-container" id="js-menu">
 				<div class="block sources" id="js-fit-height">
 					<div class="header">Sources</div>
 					<label id="all_label" for="all_check" class="option-item">All<input type="checkbox" id="all_check" name="all" checked></label>
@@ -41,7 +41,7 @@
 					<label id="foxnews_label" for="foxnews_check" class="option-item">Fox News<input type="checkbox" id="foxnews_check" name="foxnews" checked></label>
 					<label id="nytimes_label" for="nytimes_check" class="option-item">New York Times<input type="checkbox" id="nytimes_check" name="nytimes" checked></label>
 					<label id="reuters_label" for="reuters_check" class="option-item">Reuters<input type="checkbox" id="reuters_check" name="reuters" checked></label>
-					<label id="washingtonpost_label" for="washingtonpost_check" class="option-item">Washington Post<input type="checkbox" id="washingtonpost_check" name="reuters" checked></label>
+					<label id="washingtonpost_label" for="washingtonpost_check" class="option-item">Washington Post<input type="checkbox" id="washingtonpost_check" name="washingtonpost" checked></label>
 				</div>
 
 				<div class="block">
