added analytics back in, tweaked some things

--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -130,6 +130,7 @@
 		</div>
 		<!-- External Javascript -->
 		<script src="/static/js/index.js"></script>
+		<script src="/static/js/analytics.js"></script>
 		<!-- End External Javascript -->
 	</body>
 </html>
