--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -50,7 +50,7 @@
 						<select name="category" class="category-input" id="category-input">
 							<option value="all">All</option>
 							{% for option in categories %}
-							<option value="{{ option|lower }}">{{ option }}</option>
+							<option value="{{ option|lower }}">{{ option|capitalize }}</option>
 							{% endfor %}
 						</select>
 					</div>
@@ -100,6 +100,7 @@
 
 		<!-- External Javascript -->
 		<script src="/static/js/index.js"></script>
+		<script src="/static/js/analytics.js"></script>
 		<!-- End External Javascript -->
 	</body>
 </html>
