--- a/site/static/css/src/index.scss
+++ b/site/static/css/src/index.scss
@@ -172,7 +172,7 @@ body {
 		.header {
 			color:black;
 			font-size:1.5em;
-			padding:5px 0 5px 0;
+			padding:5px 25px 5px 0;
 		}
 
 		/* option menu styles*/
