tooltips in progress

--- a/site/static/css/src/article.scss
+++ b/site/static/css/src/article.scss
@@ -1,6 +1,18 @@
 
 $mobile_width:500px;
 
+/* -----------------------------------------------------------------------------
+	TESTING
+*/
+[tooltip:after {
+	position:absolute;
+	background-color: white;
+	content:'TEST';
+}
+
+
+
+
 .annotation-block {
 	position:relative;
 
