--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -54,7 +54,7 @@
 					</svg>
 
 
-					<input class="annotation-input" type="text" name="annotation" id="js-add-selection">
+					<input class="annotation-input" tooltip="this is a dummy message" type="text" name="annotation" id="js-add-selection">
 					<input type="submit" class="item button" name="add" value="Add">
 					<input type="submit" class="item button" name="remove" value="Remove">
 				</form>
