--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -48,13 +48,23 @@
 				<form action="/article/{{ article.id }}" method="post" class="block annotation-block" autocomplete="off">
 					<div class="header">Annotate</div>
 
-					<svg class="eye-toggle active-toggle" id="eye-toggle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+					<svg class="eye-toggle active-toggle" id="eye-toggle" xmlns="http://www.w3.org/2000/svg"
+						width="24"
+						height="24"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="#000"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						tooltip="toggle annotations on and off">
 						<path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
 						<circle cx="12" cy="12" r="3"/>
 					</svg>
 
 
-					<input class="annotation-input" tooltip="this is a dummy message" type="text" name="annotation" id="js-add-selection">
+					<input class="annotation-input" type="text" name="annotation" id="js-add-selection"
+					tooltip="<b>add</b> key phrases like 'Panama Canal' to<br/>annotate the article with information from <br/>wikipedia, or <b>remove</b> to blacklist inaccurate<br/>annotations">
 					<input type="submit" class="item button" name="add" value="Add">
 					<input type="submit" class="item button" name="remove" value="Remove">
 				</form>
@@ -118,6 +128,7 @@
 			</div>
 		</div>
 		<!-- External Javascript -->
+		<script src="/static/js/ui.js"></script>
 		<script src="/static/js/article.js"></script>
 		<script src="/static/js/analytics.js"></script>
 		<!-- End External Javascript -->
