adtinkering with the main button on about/article

--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -74,7 +74,7 @@
 
 				<div class="block">
 					<div class="header">Navigation</div>
-					<a href="/" class="item">Main</a>
+					<a href="/" class="item" id="js-check-submit">Main</a>
 					<a href="https://github.com/mjhouse/newsbin" target="_blank" class="item">Github</a>
 				</div>
 
