--- a/site/static/css/src/index.scss
+++ b/site/static/css/src/index.scss
@@ -281,6 +281,7 @@ body {
 
 .titlecard {
 	border-radius:3px;
+	border: 1px solid rgba(0,0,0,0.5);
 	padding:10px;
 	background-color: white;
 	box-shadow: 2px 2px 5px rgba(0,0,0,0.20);
