--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -116,7 +116,7 @@
 						to contribute, you can send me an email.
 					</p>
 					<p style="text-align:right;">
-						<a href="https://github.com/mjhouse/newsbin/issues" target="_blank">Github Issues</a>
+						<a href="https://github.com/mjhouse/newsbin/issues" target="_blank">Github Issues</a><br/>
 						<a href="mailto:michaelhouse@gmx.us">michaelhouse@gmx.us</a>
 					</p>
 					<p style="text-align:right;">
