--- a/site/static/css/src/article.scss
+++ b/site/static/css/src/article.scss
@@ -86,7 +86,10 @@ $mobile_width:500px;
 
 	.article-content {
 		padding:0 10px 0 10px;
-		height:auto;
+
+		p {
+			display:block;
+		}
 
 		@media screen and (max-width: $mobile_width) {
 			font-size:1.1em;
