--- a/site/static/css/src/article.scss
+++ b/site/static/css/src/article.scss
@@ -70,7 +70,7 @@ $mobile_width:500px;
 /* Article Page */
 .article {
 	background-color: white;
-	min-height:100vh;
+	height:auto;
 
 	@media screen and (max-width: $mobile_width) {
 		padding-top: 8vh;
