--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -41,7 +41,7 @@
 					<label id="foxnews_label" for="foxnews_check" class="option-item" role="menuitem">Fox News<input type="checkbox" id="foxnews_check" name="foxnews" checked></label>
 					<label id="nytimes_label" for="nytimes_check" class="option-item" role="menuitem">New York Times<input type="checkbox" id="nytimes_check" name="nytimes" checked></label>
 					<label id="reuters_label" for="reuters_check" class="option-item" role="menuitem">Reuters<input type="checkbox" id="reuters_check" name="reuters" checked></label>
-					<label id="washingtonpost_label" for="washingtonpost_check" class="option-item" role="menuitem">Washington Post<input type="checkbox" id="washingtonpost_check" name="washingtonpost" checked></label>
+					<label id="washingtonpost_label" for="washingtonpost_check" class="option-item" role="menuitem">Washington Post<input type="checkbox" id="washingtonpost_check" name="washpo" checked></label>
 				</div>
 
 				<div class="block">
