--- a/site/static/css/src/index.scss
+++ b/site/static/css/src/index.scss
@@ -11,12 +11,19 @@
 	animation: pop-enter $time ease-out $delay 1 forwards;
 }
 
+@font-face {
+  font-family: 'Open Sans';
+  src: url('/static/font/Open_Sans/OpenSans-Regular.ttf')  format('truetype');
+}
+
 /* mobile breakpoints */
 $mobile_width:500px;
 
 body {
 	padding:0;
 	margin:0;
+	font-family: 'Open Sans', sans-serif;
+	/*
 	font-family: -apple-system,
 			 BlinkMacSystemFont,
 			 "Segoe UI",
@@ -27,6 +34,7 @@ body {
 			 "Open Sans",
 			 "Helvetica Neue",
 			 sans-serif;
+	*/
 	background-color: #faf8f6;
 }
 
